[package]
name = "tidl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }

[dependencies.tidal_rs]
path = "src/lib"
