[package]
name = "tidal_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
indicatif = "0.18.0"
futures-core = "0.3.31"
futures-util = "0.3"
[lib]
name = "tidal_rs"
path = "lib.rs"
